.k8s/networking/monitoring-grafana-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: monitoring-grafana-gw
  namespace: monitoring
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http-grafana
      protocol: HTTP
    hosts:
    - "*"
