.k8s/networking/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-gateway-vs
  namespace: dev-web
spec:
  hosts:
  - "*"
  gateways:
  - service-gateway-ingress
  http:
  - match:
    - uri:
        prefix: / # 하위 모든 경로를 게이트웨이 서비스로 라우팅
    route:
    - destination:
        host: service-gateway
        port:
          number: 80
