.k8s/networking/monitoring-grafana-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monitoring-grafana-vs
  namespace: monitoring
spec:
  hosts:
  - "*"
  gateways:
  - monitoring-grafana-gw
  http:
  - match:
    - uri:
        prefix: /grafana/
    - uri:
        exact: /grafana
    route:
    - destination:
        host: grafana.monitoring.svc.cluster.local
        port:
          number: 3000
