.k8s/networking/service-gateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-gateway-vs
  namespace: dev-web
spec:
  hosts:
  - "*"
  gateways:
  - service-gateway-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: service-gateway
        port:
          number: 80
